--- a/band.html
+++ b/band.html
@@ -5,6 +5,11 @@
       <title> Favorite Band </title>
   </head>
   <body>
-
+    <p>Cream were a British rock band formed in London in 1966. The group consisted of bassist Jack Bruce, guitarist Eric Clapton, and drummer Ginger Baker. Bruce was the primary songwriter and vocalist, although Clapton and Baker also sang and contributed songs. Formed from members of previously successful bands, they are widely regarded as the world's first supergroup.[2] Cream were highly regarded for the instrumental proficiency of each of their members. Tensions between Bruce and Baker led to their decision in May 1968 to break up, though the band were persuaded to make a final album, Goodbye, and to tour, culminating in two final farewell concerts at the Royal Albert Hall on 25 and 26 November 1968 which were filmed by the BBC and shown in theatres, then in 1977 released as a home video, Farewell Concert.</p>
+    <img src="img/elvis1.jpg" alt="elvis1 picture" width="500px">
+    <img src="img/elvis2.jpeg" alt="elvis2 picture" width="500px">
+    <div class ="sidebar">
+      <p>Cream were a British rock band formed in London in 1966. The group consisted of bassist Jack Bruce, guitarist Eric Clapton, and drummer Ginger Baker. Bruce was the primary songwriter and vocalist, although Clapton and Baker also sang and contributed songs. Formed from members of previously successful bands, they are widely regarded as the world's first supergroup.[2] Cream were highly regarded for the instrumental proficiency of each of their members. Tensions between Bruce and Baker led to their decision in May 1968 to break up, though the band were persuaded to make a final album, Goodbye, and to tour, culminating in two final farewell concerts at the Royal Albert Hall on 25 and 26 November 1968 which were filmed by the BBC and shown in theatres, then in 1977 released as a home video, Farewell Concert.</p>
+    </div> 
   </body>
 </html>
